# ppx_viewpattern

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  dune-project  ppx_viewpattern.opam
.github/workflows/: ci.yml
example/haskell/: both.ml  dune  iterator_style.ml  join_list.ml  n_plus_k.ml
example/mimram/: dune  typing.ml
example_test/haskell/: both_test.ml  dune  iterator_style_test.ml  join_list_test.ml  n_plus_k_test.ml  test.ml
example_test/mimram/: dune  test.ml  typing_test.ml
src/: dune  ppx_viewpattern.ml
test/: both.ml  dune  n_plus_k.ml  ppx_viewpattern_test.ml  test.ml  test2.ml
