(library
 (name test)
 (modules test)
 (inline_tests)
 (preprocess (pps ppx_viewpattern ppx_inline_test)))

(library
 (name iterator_style)
 (modules iterator_style)
 (inline_tests)
 (preprocess (pps ppx_viewpattern ppx_inline_test)))

(library
 (name join_list)
 (modules join_list)
 (inline_tests)
 (preprocess (pps ppx_viewpattern ppx_inline_test)))

(library
 (name n_plus_k)
 (modules n_plus_k)
 (inline_tests)
 (preprocess (pps ppx_viewpattern ppx_inline_test)))

(library
 (name both)
 (modules both)
 (inline_tests)
 (preprocess (pps ppx_viewpattern ppx_inline_test)))

(library
 (name test2)
 (modules test2)
 (inline_tests)
 (preprocess (pps ppx_viewpattern ppx_inline_test)))
